<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_source_list_titles"
        android:entryValues="@array/pref_source_list_values"
        android:key="source_url_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_map_style_urls" />


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_route_service_name"
        android:inputType="textCapWords"
        android:key="route_service_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_route_service_name" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_emapgo_service_name"
        android:inputType="textCapWords"
        android:key="emapgo_service_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_emapgo_service_name" />


</PreferenceScreen>
